--- a/index.html
+++ b/index.html
@@ -337,7 +337,8 @@
 				})();
 			}
 		</script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
+		<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
+		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.0/gsap.min.js"></script> -->
 		<script src="./index.js"></script>
 	</body>
 </html>
